syntax = "proto3";

package gRPC_services;

option go_package = "./;bookInfo";

service bookInfo {
    // GetRate returns the exchange rate for the two provided currency codes 
    rpc GetRate(RateRequest) returns (RateResponse);
}

// RateRequest defines the request for a GetRate call
message RateRequest {
    // Base is the base currency code for the rate
    string Article_name = 1;
    // Destination is the destination currency code for the rate
    string Article_review = 2;
}

// RateResponse is the response from a GetRate call, it contains
// rate which is a floating point number and can be used to convert between the 
// two currencies specified in the request.
message RateResponse {
    float ratings = 1;
}